@@ -51,6 +51,7 @@
     * G-code preview and download endpoints
     * Thread names via prctl - can be show in htop
     * Shutdown fix
+    * Report build number alongside firmware version
 
 0.2.0 (2020-12-14)
 
